# Paper-Technical-Document-LLM-Assistant

./: .gitignore  README.md  application.DockerFile  debug.py  pyproject.toml  requirements.txt  testingllm.py
config/: model.yaml  rag_pipeline.yaml
scripts/: check_imports.py
src/: __init__.py
src/embeddings/: __init__.py  embedder.py
src/ingestion/: __init__.py  pdf_loader.py
src/llm/: __init__.py  client.py  prompts.py
src/preprocessing/: __init__.py  chunker.py
src/rag_pipeline/: __init__.py  pipeline.py
src/retrieval/: __init__.py  retriever.py
src/ui/: __init__.py  app.py
src/utils/: __init__.py  evaluation.py  logging_utils.py
